# url-shortener-api

./: .dockerignore  .env.example  .example.env  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  docker-compose.yaml  makefile  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  pre-commit-autoupdate.yml
config/: settings.py  urls.py
docker/django/: Dockerfile  Dockerfile.prod  entrypoint_production  start_dev  start_production
docker/postgres/: Dockerfile
shorturls/: admin.py  apps.py  models.py  urls.py  views.py
shorturls/migrations/: 0001_initial.py  0002_remove_shorturl_created_at.py
shorturls/tests/: test_apps.py  test_models.py  test_urls.py  test_views.py
templates/: base.html  index.html
